# private-ai

./: .env.example  .gitignore  Dockerfile  PRD.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: task-template.yml
agents/: example.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: __init__.py  config.py  constants.py  errors.py  extensions.py
app/admin/: api.py  routes.py
app/agents/: api.py  loader.py  routes.py
app/auth/: decorators.py  dev_auth.py  routes.py  sso.py
app/chat/: api.py  routes.py
app/db/: agents.py  audit.py  folders.py  messages.py  pool.py  sessions.py  tenants.py  tools.py  usage.py  users.py
app/folders/: api.py  routes.py
app/hooks/: audit_logger.py  registry.py  session_audit.py  session_recorder.py  usage_logger.py
app/model_router/: base.py  claude_adapter.py  openai_adapter.py  router.py
app/orchestrator/: context.py  engine.py  models.py
app/storage/: documents.py  s3.py
app/tools/: api.py  executor.py  routes.py
scripts/: seed_dev_data.py
static/js/: chat-stream.js
templates/: base.html  chat.html  login.html
templates/admin/: agent_form.html  agents.html  audit.html  base_admin.html  dashboard.html  folder_form.html  folders.html  tool_form.html  tools.html  usage.html  users.html
templates/macros/: chat_message.html  forms.html  nav.html
tests/: conftest.py
tests/e2e/: conftest.py  test_admin_crud.py  test_admin_flow.py  test_chat_flow.py  test_real_chat.py  test_round2_fixes.py
tests/integration/: conftest.py  test_routes_admin.py  (+3 more)
(+4 files in other folders)
