[project]
name = "private-ai"
version = "0.1.0"
description = "Private, white-labelled AI gateway"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "psycopg[binary,pool]>=3.1",
    "alembic>=1.13",
    "boto3>=1.34",
    "authlib>=1.3",
    "httpx>=0.27",
    "anthropic>=0.40",
    "openai>=1.50",
    "python-frontmatter>=1.1",
    "gunicorn>=22.0",
    "jsonschema>=4.21",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-flask>=1.3",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.2",
    "responses>=0.25",
    "playwright>=1.40",
    "pytest-playwright>=0.5",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests (no I/O, no DB)",
    "integration: Integration tests (requires DB and/or S3)",
    "e2e: End-to-end browser tests (requires running server)",
    "eval: LLM eval tests (requires API key, non-deterministic)",
]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 0
